# Spikeroog

./: README.md  build.bat
RLUtilities/: .gitignore  CMakeLists.txt
RLUtilities/src/mechanics/: dodge.cc
RLUtilities/src/simulation/: game.cc
Spikeroog/: .gitignore  CMakeLists.txt  main.cpp
Spikeroog/inc/: agent.h
Spikeroog/inc/maneuvers/: challenge.h  collect_boost.h  defense.h  kickoff.h  maneuver.h  pickup_ball.h  recovery.h  spike_ceiling_shot.h  spike_shot.h  walldash_spike_carry.h
Spikeroog/inc/mechanics/: travel.h  walldash.h
Spikeroog/inc/utils/: game_info.h  misc.h  vector_math.h
Spikeroog/release/: appearance.cfg  spikeroog.cfg
Spikeroog/src/: agent.cc
Spikeroog/src/maneuvers/: challenge.cc  collect_boost.cc  defense.cc  kickoff.cc  pickup_ball.cc  recovery.cc  spike_ceiling_shot.cc  spike_shot.cc  walldash_spike_carry.cc
Spikeroog/src/mechanics/: travel.cc  walldash.cc
Spikeroog/src/utils/: vector_math.cc
